--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "preview": "vite preview",
     "type-check": "tsc --noEmit"
   },
-  "keywords": ["pixijs", "typescript", "vite", "slot-machine", "game"],
+  "keywords": [
+    "pixijs",
+    "typescript",
+    "vite",
+    "slot-machine",
+    "game"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "pixi.js": "^8.0.0",
-    "gsap": "^3.12.2"
+    "gsap": "^3.12.2",
+    "pixi-spine": "^2.0.5",
+    "pixi.js": "^5.3.12"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.0"
   }
-} 
+}
