--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@pixi-spine/all-4.1": "^4.0.6",
+    "@esotericsoftware/spine-pixi-v8": "~4.2.0",
     "gsap": "^3.12.2",
     "pixi.js": "^8.0.0"
   },
