--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
     "vite-plugin-static-copy": "^3.2.0"
-  }
+  },
+  "packageManager": "pnpm@10.27.0"
 }
