--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,18 @@
 image: node:24.1.0
 
-before_script:
-  - corepack enable
-  - corepack install
-  - pnpm config set store-dir .pnpm-store
+default:
+  before_script:
+    - corepack enable
+    - corepack install
+    - pnpm config set store-dir .pnpm-store
+  cache:
+    key:
+      files:
+        - pnpm-lock.yaml
+    paths:
+      - .pnpm-store/
 
 stages:
-  - install
   - build
   - deploy
 
@@ -20,18 +26,10 @@ stages:
   addgroup --system de_us --gid 2001 && adduser --system de_us --gid 2001 --uid 2001
   chown -R de_us.de_us ./
 
-install:
-  stage: install
-  cache:
-    key: ${CI_COMMIT_REF_SLUG}-pnpm
-    paths:
-      - .pnpm-store/
-  script:
-    - pnpm install --frozen-lockfile
-
 build:
   stage: build
   script:
+    - pnpm install --frozen-lockfile --prefer-offline
     - pnpm run build
   artifacts:
     expire_in: 1 week
