chore: update rsync source path to dist

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,5 @@
 image: node:24.1.0
 
-default:
-  before_script:
-    - corepack enable
-    - corepack install
-    - pnpm config set store-dir .pnpm-store
-  cache:
-    key:
-      files:
-        - pnpm-lock.yaml
-    paths:
-      - .pnpm-store/
-
 stages:
   - build
   - deploy
@@ -28,6 +16,16 @@ stages:
 
 build:
   stage: build
+  cache:
+    key:
+      files:
+        - pnpm-lock.yaml
+    paths:
+      - .pnpm-store/
+  before_script:
+    - corepack enable
+    - corepack install
+    - pnpm config set store-dir .pnpm-store
   script:
     - pnpm install --frozen-lockfile --prefer-offline
     - pnpm run build
@@ -46,7 +44,7 @@ deploy-testing:
       -av
       --delete
       --password-file=/etc/rsync.secret
-      ./dist/Release/ root@${RSYNC_HOST_TESTING}::${RSYNC_MODULE}
+      ./dist/ root@${RSYNC_HOST_TESTING}::${RSYNC_MODULE}
   only:
     - master
 
@@ -60,7 +58,7 @@ deploy-production:
       -av
       --delete
       --password-file=/etc/rsync.secret
-      ./dist/Release/ root@${RSYNC_HOST_PRODUCTION}::${RSYNC_MODULE}
+      ./dist/ root@${RSYNC_HOST_PRODUCTION}::${RSYNC_MODULE}
   when: manual
   only:
     - master
